# rat_game_v2

./: .gitmodules  CMakeLists.txt  main.cpp  resource_path.hpp.in  settings.jl
.src/: initialize.cpp  input_handler.cpp
.test/: julia_side.cpp
include/: initialize.hpp  input_handler.hpp  render_window.hpp
julia/: battle.jl  common.jl  include.jl  status_ailment.jl  test.jl
julia/.test/: test_entity.jl  test_status.jl
julia/battle/: battle_entity.jl  battle_log.jl  battle_scene.jl  log.jl  moves.jl  stat_change.jl  status_ailment.jl
julia/battle/config/: move_config.jl
julia/common/: logging.jl  macros.jl  player_Input.jl  player_input.jl  pretty_printing.jl  random.jl
julia/test/: test_status_ailment.jl
